# CppInterfaces

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  config.json  serial_monitor.sh
crtp/: ITicker.h
crtp/Tickers/: SimpleTicker.cpp  SimpleTicker.h
docs/: design.drawio  interface-inherit.drawio
dynamic/: CMakeLists.txt  ITicker.h
example_app/: App_user.h  CMakeLists.txt
example_app/crtp/: CMakeLists.txt  IGPIO.h  main.cpp
example_app/crtp/GPIO/: FauxGPIO.h
example_app/crtp/Tickers/: BoostTicker.h
example_app/dynamic/: IGPIO.h  main.cpp
example_app/dynamic/GPIO/: FauxGPIO.h
example_app/dynamic/Tickers/: BoostTicker.cpp  BoostTicker.h  SimpleTicker.h
example_app/src/: App.h  CMakeLists.txt  ITicker.h  main_arduino.cpp  main_pc.cpp  unit_test.cpp
example_app/src/Entrypoint/Arduino/: main.cpp
example_app/src/Entrypoint/Generic/: main.cpp
example_app/src/ExampleApp/: App_user.h
example_app/src/GPIO/: ArduinoGPIO.cpp  ArduinoGPIO.h  FauxGPIO.cpp  FauxGPIO.h  IGPIO.h
example_app/src/GPIO/test/: unit_test.cpp
example_app/src/Platform/: ArduinoPlatform.cpp  ArduinoPlatform.h  DesktopPlatform.cpp  DesktopPlatform.h  IPlatform.h
example_app/src/TestRunner/: TestRunner.h
example_app/src/Tickers/: ArduinoTicker.cpp  ArduinoTicker.h  BoostTicker.cpp  BoostTicker.h  ITicker.h  SimpleTicker.cpp  SimpleTicker.h
example_app/src/functional/: functional
example_app/static_binding/: ITicker.h  main.cpp
example_app/static_binding/GPIO/: FauxGPIO.cpp  FauxGPIO.h
static_binding/: CMakeLists.txt  IGPIO.h
static_binding/Tickers/: BoostTicker.h  SimpleTicker.h
